jova.less
/* ... */
.givingback-content{
  padding-top: 24px;
  padding-bottom: 48px;
  p{
    font-size: 18px;
    line-height: 26px;
  }
}





//
//
//
// IPAD (portrait)
//
//
//
@media only screen and (min-width: 768px){

  p{
    line-height: 28px;
  }

  // Show Address (slogan)
  #Action_bar .contact_details li.slogan{
    display: inline-block;
  }

  // Main Nav
  #Top_bar{
    .logo{
      margin: 0 0 0 20px;
      img{
        width: 190px !important;
        height: 65px !important;
      }
    }
  }

  //Footer
  #Footer{
    p{
      line-height: 22px;
    }
    .column.one-fourth{
      &:nth-child(2){
        img{
          width: 90%;
        }
      }
    }
    .jova-contact-info{
      text-align: left;
    }
    .jova-hours{
      text-align: left;
    }
  }

  // Headers
  #jova-header{
    padding: 130px 0;
    h2{
      margin: 0 auto 20px auto;
      font-size: 35px;
      line-height: 50px;
      strong{
        font-size: 50px;
        line-height: 80px;
      }
    }
    .default-header{
      h2{
        margin: 60px auto;
        font-size: 80px;
        font-weight: 300;
        line-height: 80px;
        text-shadow: 0px 0px 100px rgba(0, 0, 0, 0.5);
      }
    }
    //About
    .about-header{
      h2{

      }
    }
    //Services
    .services-header{
      h2{
        text-shadow: 0px 0px 80px rgba(0, 0, 0, 1.0);
      }
    }
    //Practice
    .practice-header{
      background-image: none;
      z-index: 1;
      position: relative;
      h2{
        text-shadow: 0 0 100px rgba(0,0,0,0.4);
      }
    }
    .our-healing-space-header-slider{
      position: absolute;
      top: -200px;
    }
    //FAQ
    .faq-header{
      h2{
        text-shadow: 0px 0px 60px rgba(0, 0, 0, 1.0);
      }
    }
    //New Client Forms
    .newclientforms-header{
      h2{
        text-shadow: 0px 0px 100px rgba(0, 0, 0, 1.0);
      }
    }
    //Insurance
    .insurance-header{
      h2{
        text-shadow: 0px 0px 150px rgba(0, 0, 0, 0.3);
      }
    }
    //Giving Back
    .givingback-header{
      h2{
        text-shadow: 0px 0px 100px rgba(0, 0, 0, 0.5);
      }
    }
  }

  .about-jova{
    .vc_column-inner{
      padding: 100px 24px !important;
    }
    h3{
      margin-bottom: 24px;
    }
    p{
      font-size: 24px;
      line-height: 36px;
    }
  }
  .about-james{
    .vc_column-inner{
      padding: 100px 24px !important;
    }
    .james-headshot{
      float: left;
      margin: -16px 20px 20px 0;
    }
    h3{
      margin-bottom: 8px;
    }
    .more-about-jova{
      float: right;
      p{
        a{
          font-size: 24px;
          line-height: 40px;
        }
      }
      i.fa-arrow-circle-right{
        height: 40px;
        &:before{
          .fontawesome;
          font-size: 40px;
        }
      }
    }
  }

  // Promo section
  .jova-promo{
    -moz-border-radius: 75px;
    -webkit-border-radius: 75px;
    border-radius: 75px;
    .wpb_single_image{
      display: block;
    }
  }

  // Services
  .services{
    .vc_column-inner{
      height: 320px;
      height: ~"calc( 100vw / 4 )";
      max-height: 400px;
    }
    a:hover,
    a:active{
      background: rgba(0,0,0,0.25);
    }
  }

  // About
  .about-intro{
    p{
      font-size: 30px;
      line-height: 46px;
    }
  }
  .about-content{
    padding-top: 60px;
    padding-bottom: 150px;
    h3{
      margin-bottom: 24px !important;
    }
  }

  // Sub-page Icon Blocks
  .sub-page-blocks{
    padding-top: 90px;
    padding-bottom: 90px;
  }

  // Location Block (HOME)
  .homepage-location{
    .jova-contact-box{
      top: 200px;
      right: auto;
      left: 30px;
    }
  }

  //
  // SERVICES PAGE
  .services-intro{
    padding-top: 100px;
    padding-bottom: 100px;
  }
  .services-section{
    .service-info{
      padding: 70px 60px;
    }
  }
  .jova-pricing{
    padding-top: 100px;
    padding-bottom: 150px;
    h3{
      margin-bottom: 60px !important;
    }
    .pricing-info{
      padding: 40px 60px 100px 60px;
      a,
      a:visited{
        bottom: 50px;
      }
    }
  }

  //
  // PRACTICE (OUR HEALING SPACE) PAGE
  .page-id-228{
    .our-healing-space-header-slider{
      display: block;
    }
  }
  .practice-intro{
    padding-top: 50px;
    padding-bottom: 50px;
    p{
      font-size: 24px;
      line-height: 36px;
    }
  }
  .practice-info{
    padding-top: 100px;
    padding-bottom: 100px;
  }

  //
  // FAQ PAGE
  .jova-faqs{
    padding-top: 100px;
    padding-bottom: 100px;
    .faq{
      .question{
        .title{
          &:after{
            margin-right: 0;
          }
        }
        .answer{
          padding-right: 100px;
        }
      }
    }
  }
  .faq-form{
    padding-top: 100px;
    padding-bottom: 150px;
    form{
      p{
        color: @white;
        &:nth-child(2){
          float: left;
          width: ~"calc( 50% - 12px )";
          margin-right: 24px;
        }
        &:nth-child(3){
          float: right;
          width: ~"calc( 50% - 12px )";
        }

        input[type="submit"]{
          padding: 16px 80px;
        }
      }
    }
  }

  //
  // NEW CLIENT FORMS PAGE
  .newclientforms-content{
    padding-top: 100px;
    padding-bottom: 150px;
  }

  //
  // INSURANCE PAGE
  .insurance-content{
    padding-top: 100px;
    padding-bottom: 150px;
    p{
      font-size: 24px;
      line-height: 36px;
    }
  }

  //
  // GIVING BACK PAGE
  .givingback-intro{
    padding-top: 100px;
    padding-bottom: 100px;
    p{
      font-size: 32px;
      line-height: 42px
    }
    blockquote{
      p{
        font-size: 60px;
        line-height: 80px;
      }
    }
  }
  .givingback-content{
    padding-top: 100px;
    padding-top: 150px;
    p{
      font-size: 24px;
      line-height: 36px;
    }
  }

}
/* ... */

